--- a/index.html
+++ b/index.html
@@ -260,33 +260,49 @@ section {
       }
 
 function renderVideoList(videos) {
-  videoList.innerHTML = ''; // 既存のリストをリセット
+  videoList.innerHTML = ''; // リスト初期化
 
   videos.forEach(video => {
     const item = document.createElement('div');
-    item.className = 'p-3 mb-3 bg-blue-100 rounded-lg shadow-md border-2 border-teal-700 space-y-2';
+    item.className = 'p-3 mb-3 bg-blue-100 rounded-lg shadow-md border-2 border-teal-700 space-y-1';
 
-    // --- タイトル / アーティスト名（1行目） ---
+    // --- 1行目：タイトル / アーティスト名（クリック可能） ---
     const topRow = document.createElement('div');
-    topRow.className = 'text-base sm:text-lg font-semibold text-blue-800 cursor-pointer';
-    topRow.textContent = `${video["title"]} / ${video["artist"]}`;
-    topRow.onclick = e => {
+    topRow.className = 'flex flex-wrap items-center gap-2 text-base sm:text-lg';
+
+    const title = document.createElement('a');
+    title.href = "#";
+    title.className = 'font-semibold text-blue-800 hover:underline';
+    title.textContent = video["title"];
+    title.onclick = e => {
       e.preventDefault();
       loadVideo(video, item);
     };
 
-    // --- 詳細情報（2行目） ---
-    const metaRow = document.createElement('div');
-    metaRow.className = 'text-sm text-gray-600';
-    metaRow.textContent = `${video["カテゴリ"]} / ${video["公開日"]} / ${video["動画種別"]} / ${video["担当区分"]}`;
+    const artist = document.createElement('span');
+    artist.className = 'text-gray-700';
+    artist.textContent = `/ ${video["artist"]}`;
 
-    // --- 再生中ハイライト ---
+    topRow.appendChild(title);
+    topRow.appendChild(artist);
+
+    // --- 2行目：カテゴリ / 公開日 / 動画種別 / 担当区分（横並び） ---
+    const metaRow = document.createElement('div');
+    metaRow.className = 'text-sm text-gray-600 flex flex-wrap gap-x-4';
+    metaRow.innerHTML = `
+      <span>${video["カテゴリ"]}</span>
+      <span>${video["公開日"]}</span>
+      <span>${video["動画種別"]}</span>
+      <span>${video["担当区分"]}</span>
+    `;
+
+    // --- 再生中ハイライト
     const nowPlayingTitle = document.getElementById('nowPlayingTitle').textContent;
     if (`${video["title"]} - ${video["artist"]}` === nowPlayingTitle) {
-      item.style.backgroundColor = '#e0f7fa'; // ハイライト色
+      item.style.backgroundColor = '#e0f7fa';
     }
 
-    // --- 要素を追加 ---
+    // --- 要素追加
     item.appendChild(topRow);
     item.appendChild(metaRow);
     videoList.appendChild(item);
