--- a/index.html
+++ b/index.html
@@ -260,13 +260,13 @@ section {
       }
 
 function renderVideoList(videos) {
-  videoList.innerHTML = ''; // リスト初期化
+  videoList.innerHTML = '';
 
   videos.forEach(video => {
     const item = document.createElement('div');
     item.className = 'p-3 mb-3 bg-blue-100 rounded-lg shadow-md border-2 border-teal-700 space-y-1';
 
-    // --- 1行目：タイトル / アーティスト名（クリック可能） ---
+    // --- 1行目：曲名 / アーティスト名（横並び） ---
     const topRow = document.createElement('div');
     topRow.className = 'flex flex-wrap items-center gap-2 text-base sm:text-lg';
 
@@ -286,9 +286,9 @@ function renderVideoList(videos) {
     topRow.appendChild(title);
     topRow.appendChild(artist);
 
-    // --- 2行目：カテゴリ / 公開日 / 動画種別 / 担当区分（横並び） ---
+    // --- 2行目：詳細4項目 横並び ---
     const metaRow = document.createElement('div');
-    metaRow.className = 'text-sm text-gray-600 flex flex-wrap gap-x-4';
+    metaRow.className = 'flex flex-wrap gap-x-4 text-sm text-gray-600';
     metaRow.innerHTML = `
       <span>${video["カテゴリ"]}</span>
       <span>${video["公開日"]}</span>
@@ -296,13 +296,12 @@ function renderVideoList(videos) {
       <span>${video["担当区分"]}</span>
     `;
 
-    // --- 再生中ハイライト
+    // 再生中の強調表示
     const nowPlayingTitle = document.getElementById('nowPlayingTitle').textContent;
     if (`${video["title"]} - ${video["artist"]}` === nowPlayingTitle) {
       item.style.backgroundColor = '#e0f7fa';
     }
 
-    // --- 要素追加
     item.appendChild(topRow);
     item.appendChild(metaRow);
     videoList.appendChild(item);
