--- a/index.html
+++ b/index.html
@@ -134,8 +134,12 @@ section {
 </head>
 <body class="bg-white text-gray-800">
   <header class="border-b sticky top-0 z-10 bg-white/90 backdrop-blur px-4 py-3 shadow-sm">
-    <h1 class="text-center text-xl sm:text-2xl font-semibold text-gray-900 tracking-tight">🎤 にじさんじ所属 司賀りこ 歌まとめ</h1>
+    <h1 class="text-center text-xl sm:text-2xl font-semibold text-gray-900 tracking-tight">司賀りこ 歌まとめ</h1>
   </header>
+
+  <div class="max-w-4xl mx-auto px-4 mt-4 text-center text-sm text-gray-600">
+  にじさんじ所属 司賀りこさんの歌ってみたや歌枠などをまとめた非公式ファンサイトです。
+</div>
 
   <section class="max-w-8xl mx-auto mt-6 px-4">
     <h2 class="text-xl font-semibold text-gray-800">動画リスト</h2>
@@ -165,7 +169,14 @@ section {
     </div>
   </section>
 
-  <main id="videoList" class="max-w-4xl mx-auto px-4 py-8 divide-y divide-gray-200"></main>
+  <main id="videoList" class="max-w-4xl mx-auto px-4 py-8 divide-y divide-gray-200"> 
+  </main>
+
+  <footer class="text-center text-xs text-gray-500 mt-12 px-4 space-y-2">
+  <p>本サイトはファンによる非公式ページです。にじさんじ・ANYCOLOR株式会社とは一切関係ありません。</p>
+  <p>このサイトは <a href="https://pages.github.com/" class="underline" target="_blank">GitHub Pages</a> を利用して公開しています。</p>
+  <p>動画は各配信プラットフォームの埋め込み機能を使用しています。</p>
+</footer>
 
   <!-- 再生中の曲名表示部分 -->
 <div id="nowPlaying" class="fixed bottom-0 left-0 w-full bg-blue-100 text-blue-900 py-2 text-center font-medium z-30">
