--- a/index.html
+++ b/index.html
@@ -172,8 +172,8 @@ section {
   <main id="videoList" class="max-w-4xl mx-auto px-4 py-8 divide-y divide-gray-200"> 
   </main>
 
-  <footer class="text-center text-xs text-gray-500 mt-12 px-4 space-y-2">
-  <p>本サイトはファンによる非公式ページです。にじさんじ・ANYCOLOR株式会社とは一切関係ありません。</p>
+  <footer class="text-center text-xs text-gray-500 mt-12 px-4 pb-16 space-y-2">
+  <p>本サイトはファンによる非公式ページです。ANYCOLOR株式会社様とは一切関係ありません。</p>
   <p>このサイトは <a href="https://pages.github.com/" class="underline" target="_blank">GitHub Pages</a> を利用して公開しています。</p>
   <p>動画は各配信プラットフォームの埋め込み機能を使用しています。</p>
 </footer>
