--- a/index.html
+++ b/index.html
@@ -142,6 +142,7 @@ section {
 </div>
 
   <section class="max-w-8xl mx-auto mt-6 px-4">
+    <h2 class="text-xl font-semibold text-gray-800">動画リスト</h2>
     <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-3">
       <select id="categoryFilter" class="rounded-md border border-gray-300 px-3 py-2 text-sm focus:ring-blue-300 transition duration-200">
         <option value="">カテゴリ</option>
@@ -185,11 +186,6 @@ section {
   <!-- 固定プレイヤー -->
 <div id="fixedPlayer" class="fixed bottom-0 left-0 w-full bg-white border-t shadow-lg z-20">
   <div class="max-w-4xl mx-auto p-4">
-
- <button id="closePlayerButton" class="absolute top-2 right-2 text-gray-500 hover:text-black text-xl font-bold">
-      &times;
-    </button>
-    
     <div class="bg-black rounded-xl overflow-hidden shadow-lg">
       <iframe id="playerIframe" class="w-full aspect-video" src="" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
@@ -198,7 +194,7 @@ section {
 
   <template id="videoPlayerTemplate">
     <div class="video-player-container w-full mt-4 fade-in">
-     <div class="bg-black rounded-xl overflow-hidden shadow-lg">
+      <div class="bg-black rounded-xl overflow-hidden shadow-lg">
         <iframe class="w-full aspect-video" src="" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </div>
     </div>
@@ -209,39 +205,31 @@ section {
     let allVideos = [];
 
     window.addEventListener('DOMContentLoaded', () => {
-  const categoryFilter = document.getElementById('categoryFilter');
-  const dateFilter = document.getElementById('dateFilter');
-  const typeFilter = document.getElementById('typeFilter');
-  const roleFilter = document.getElementById('roleFilter');
-  const searchInput = document.getElementById('searchInput');
-  const sortOrder = document.getElementById('sortOrder');
-  const resetButton = document.getElementById('resetFilters');
-  const videoList = document.getElementById('videoList');
-  const videoPlayerTemplate = document.getElementById('videoPlayerTemplate');
-  const randomPlayButton = document.getElementById('randomPlayButton');
-  const closePlayerButton = document.getElementById('closePlayerButton');
+      fetch(sheetJsonUrl)
+        .then(response => response.json())
+        .then(data => {
+          allVideos = data;
+          populateFilters(data);
+          applyFilters();
+        });
 
-  closePlayerButton.addEventListener('click', () => {
-    const fixedPlayer = document.getElementById('fixedPlayer');
-    const iframe = document.getElementById('playerIframe');
-    fixedPlayer.style.display = 'none';
-    iframe.src = '';
-  });
+       const randomPlayButton = document.getElementById('randomPlayButton');
 
+  // ランダム再生ボタンのクリックイベント
   randomPlayButton.addEventListener('click', () => {
-    const randomVideo = allVideos[Math.floor(Math.random() * allVideos.length)];
-    loadVideo(randomVideo, null);
+    const randomVideo = allVideos[Math.floor(Math.random() * allVideos.length)]; // ランダムに動画を選択
+    loadVideo(randomVideo, null); // ランダムに選ばれた動画を再生プレイヤーで再生
   });
 
-  fetch(sheetJsonUrl)
-    .then(response => response.json())
-    .then(data => {
-      allVideos = data;
-      populateFilters(data);
-      applyFilters();
-    });
-});
-
+      const categoryFilter = document.getElementById('categoryFilter');
+      const dateFilter = document.getElementById('dateFilter');
+      const typeFilter = document.getElementById('typeFilter');
+      const roleFilter = document.getElementById('roleFilter');
+      const searchInput = document.getElementById('searchInput');
+      const sortOrder = document.getElementById('sortOrder');
+      const resetButton = document.getElementById('resetFilters');
+      const videoList = document.getElementById('videoList');
+      const videoPlayerTemplate = document.getElementById('videoPlayerTemplate');
 
       function populateFilters(videos) {
         const sets = {
