--- a/index.html
+++ b/index.html
@@ -183,14 +183,29 @@ section {
   <span id="nowPlayingTitle">再生中の曲名</span>
 </div>
 
-  <!-- 固定プレイヤー -->
+<!-- 固定プレイヤーのボタン -->
 <div id="fixedPlayer" class="fixed bottom-0 left-0 w-full bg-white border-t shadow-lg z-20">
-  <div class="max-w-4xl mx-auto p-4">
-    <div class="bg-black rounded-xl overflow-hidden shadow-lg">
-      <iframe id="playerIframe" class="w-full aspect-video" src="" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  <div class="max-w-4xl mx-auto p-4 flex justify-between items-center">
+    <div class="flex items-center gap-4">
+      <button id="prevBtn" class="text-gray-700 hover:text-blue-600">⏮️</button>
+      <button id="playBtn" class="text-gray-700 hover:text-blue-600">▶️</button>
+      <button id="nextBtn" class="text-gray-700 hover:text-blue-600">⏭️</button>
+    </div>
+    <div class="text-xs text-gray-600 text-center">
+      <div id="nowPlaying" class="truncate">🎵 再生中: -</div>
+      <div id="nextUp" class="truncate">🎶 次: -</div>
+    </div>
+    <div class="flex items-center gap-3">
+      <button id="shuffleToggleBtn" class="text-gray-400 hover:text-blue-500 transition">
+        🔀
+      </button>
+      <button id="repeatToggleBtn" class="text-gray-400 hover:text-blue-500 transition">
+        🔁
+      </button>
     </div>
   </div>
 </div>
+
 
   <template id="videoPlayerTemplate">
     <div class="video-player-container w-full mt-4 fade-in">
