--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@ section {
   <p>動画は各配信プラットフォームの埋め込み機能を使用しています。</p>
 
      <!-- 最終更新日 -->
-  <p>最終更新日: <span id="lastUpdated">Loading...</span></p> <!-- ここにJavaScriptで時間が入ります -->
+ <div id="lastUpdated" class="text-center mt-4 text-sm text-gray-600"></div>
 </footer>
  
   <!-- 再生中の曲名表示部分 -->
