--- a/index.html
+++ b/index.html
@@ -408,6 +408,7 @@ fixedPlayer.style.display = 'none'; // プレイヤーを非表示
     
     // 動画の再生を停止する（YouTubeの場合）
     const iframe = document.getElementById('playerIframe');
+    if (iframe) {
     const player = iframe.contentWindow;
   player.postMessage(JSON.stringify({
       event: 'command',
