--- a/index.html
+++ b/index.html
@@ -176,9 +176,7 @@ section {
   <p>本サイトはファンによる非公式ページです。</p>
   <p>このサイトは <a href="https://pages.github.com/" class="underline" target="_blank">GitHub Pages</a> を利用して公開しています。</p>
   <p>動画は各配信プラットフォームの埋め込み機能を使用しています。</p>
-
-     <!-- 最終更新日 -->
- <div id="lastUpdated" class="text-center mt-4 text-sm text-gray-600"></div>
+ <p>最終更新日：2025/04/14 01:36:13</p>
 </footer>
  
   <!-- 再生中の曲名表示部分 -->
