--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@ section {
   <p>本サイトはファンによる非公式ページです。</p>
   <p>このサイトは <a href="https://pages.github.com/" class="underline" target="_blank">GitHub Pages</a> を利用して公開しています。</p>
   <p>動画は各配信プラットフォームの埋め込み機能を使用しています。</p>
- <p>最終更新日：2025/04/14 02:29</p>
+ <p>最終更新日：2025/04/14 02:36</p>
 </footer>
  
   <!-- 再生中の曲名表示部分 -->
@@ -402,16 +402,15 @@ function loadVideo(video, container) {
     
     // 動画の再生を停止する（YouTubeの場合）
     const iframe = document.getElementById('playerIframe');
-    if (iframe) {
-      const player = iframe.contentWindow;
-      player.postMessage(JSON.stringify({
-        event: 'command',
-        func: 'pauseVideo',
-        args: []
-      }), '*'); // YouTubeの再生を停止
-    } else {
-      console.log('Player iframe not found');
-    }
+    if (platform.toLowerCase().includes("youtube")) {
+  iframe.contentWindow?.postMessage(JSON.stringify({
+    event: 'command',
+    func: 'pauseVideo',
+    args: []
+  }), '*');
+} else {
+  iframe.src = "";
+}
   }); // ここで addEventListener の閉じ括弧
 } // ここで loadVideo 関数の閉じ括弧
 
