--- a/index.html
+++ b/index.html
@@ -139,6 +139,8 @@ section {
 
   <div class="max-w-4xl mx-auto px-4 mt-4 text-center text-sm text-gray-600">
   にじさんじ所属 司賀りこさんの歌ってみたや歌枠などをまとめた非公式ファンサイトです。
+  Youtube(歌ってみた、shorts、歌枠) / tiktok を掲載しています。
+  tiktokのみ、仕様上youtubeに比べると再生音が大きい為、ご注意ください。
 </div>
 
   <section class="max-w-8xl mx-auto mt-6 px-4">
