--- a/index.html
+++ b/index.html
@@ -144,6 +144,14 @@ section {
 </div>
 
   <section class="max-w-8xl mx-auto mt-6 px-4">
+
+    <!-- モバイル専用フィルターボタン（sectionの直後） -->
+<div class="block sm:hidden text-center mt-4">
+  <button id="openFilterModal" class="bg-blue-500 text-white px-4 py-2 rounded-md">
+    🔍 絞り込み
+  </button>
+</div>
+
     <h2 class="text-xl font-semibold text-gray-800">動画リスト</h2>
     <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-3">
       <select id="categoryFilter" class="rounded-md border border-gray-300 px-3 py-2 text-sm focus:ring-blue-300 transition duration-200">
@@ -174,11 +182,42 @@ section {
   <main id="videoList" class="max-w-4xl mx-auto px-4 py-8 divide-y divide-gray-200"> 
   </main>
 
+<!-- モーダル本体 -->
+<div id="filterModal" class="fixed inset-0 bg-black bg-opacity-50 z-40 flex items-center justify-center hidden">
+  <div class="bg-white w-11/12 max-w-md p-4 rounded-lg shadow-lg">
+    <h2 class="text-lg font-bold mb-4">絞り込み</h2>
+    
+    <!-- モーダル用のフィルター入力欄 -->
+    <div class="space-y-3">
+      <select id="modalCategoryFilter" class="w-full border p-2 rounded">
+        <option value="">カテゴリ</option>
+      </select>
+      <select id="modalDateFilter" class="w-full border p-2 rounded">
+        <option value="">公開日</option>
+      </select>
+      <select id="modalTypeFilter" class="w-full border p-2 rounded">
+        <option value="">動画種別</option>
+      </select>
+      <select id="modalRoleFilter" class="w-full border p-2 rounded">
+        <option value="">担当区分</option>
+      </select>
+      <input id="modalSearchInput" type="text" placeholder="曲名・アーティスト" class="w-full border p-2 rounded" />
+    </div>
+
+    <!-- モーダル操作 -->
+    <div class="mt-4 flex justify-between">
+      <button id="applyFilters" class="bg-blue-500 text-white px-4 py-2 rounded-md">適用</button>
+      <button id="closeFilterModal" class="text-gray-600 hover:text-black px-4 py-2">キャンセル</button>
+    </div>
+  </div>
+</div>
+
+
   <footer class="text-center text-xs text-gray-500 mt-12 px-4 pb-16 space-y-2">
   <p>本サイトはファンによる非公式ページです。</p>
   <p>このサイトは <a href="https://pages.github.com/" class="underline" target="_blank">GitHub Pages</a> を利用して公開しています。</p>
   <p>動画は各配信プラットフォームの埋め込み機能を使用しています。</p>
- <p>最終更新日：2025/04/14 02:48</p>
+ <p>最終更新日：2025/04/14 03:01</p>
 </footer>
  
   <!-- 再生中の曲名表示部分 -->
@@ -222,6 +261,28 @@ section {
           applyFilters();
         })});
 
+    // モバイル用フィルターモーダル制御
+document.getElementById('openFilterModal').addEventListener('click', () => {
+  document.getElementById('filterModal').classList.remove('hidden');
+});
+
+document.getElementById('closeFilterModal').addEventListener('click', () => {
+  document.getElementById('filterModal').classList.add('hidden');
+});
+
+document.getElementById('applyFilters').addEventListener('click', () => {
+  // モーダルから値を取得して本体に反映
+  categoryFilter.value = document.getElementById('modalCategoryFilter').value;
+  dateFilter.value = document.getElementById('modalDateFilter').value;
+  typeFilter.value = document.getElementById('modalTypeFilter').value;
+  roleFilter.value = document.getElementById('modalRoleFilter').value;
+  searchInput.value = document.getElementById('modalSearchInput').value;
+
+  applyFilters();
+  document.getElementById('filterModal').classList.add('hidden');
+});
+
+
        const randomPlayButton = document.getElementById('randomPlayButton');
 
   // ランダム再生ボタンのクリックイベント
@@ -259,6 +320,14 @@ section {
         addOptions(dateFilter, [...sets.date].sort());
         addOptions(typeFilter, [...sets.type].sort());
         addOptions(roleFilter, [...sets.role].sort());
+
+
+// モーダル用にも同じく追加
+addOptions(document.getElementById('modalCategoryFilter'), [...sets.category].sort());
+addOptions(document.getElementById('modalDateFilter'), [...sets.date].sort());
+addOptions(document.getElementById('modalTypeFilter'), [...sets.type].sort());
+addOptions(document.getElementById('modalRoleFilter'), [...sets.role].sort());
+
 
         [categoryFilter, dateFilter, typeFilter, roleFilter, searchInput, sortOrder].forEach(el => {
           el.addEventListener('change', applyFilters);
