--- a/index.html
+++ b/index.html
@@ -154,26 +154,27 @@ section {
 
     <h2 class="text-xl font-semibold text-gray-800">動画リスト</h2>
     <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-3">
-      <select id="categoryFilter" class="rounded-md border border-gray-300 px-3 py-2 text-sm focus:ring-blue-300 transition duration-200">
+      <select id="categoryFilter" class="hidden sm:block rounded-md border border-gray-300 px-3 py-2 text-sm focus:ring-blue-300 transition duration-200">
         <option value="">カテゴリ</option>
       </select>
-      <select id="dateFilter" class="rounded-md border border-gray-300 px-3 py-2 text-sm focus:ring-blue-300 transition duration-200">
+      <select id="dateFilter" class="hidden sm:block rounded-md border border-gray-300 px-3 py-2 text-sm focus:ring-blue-300 transition duration-200">
         <option value="">公開日</option>
       </select>
-      <select id="typeFilter" class="rounded-md border border-gray-300 px-3 py-2 text-sm focus:ring-blue-300 transition duration-200">
+      <select id="typeFilter" class="hidden sm:block rounded-md border border-gray-300 px-3 py-2 text-sm focus:ring-blue-300 transition duration-200">
         <option value="">動画種別</option>
       </select>
-      <select id="roleFilter" class="rounded-md border border-gray-300 px-3 py-2 text-sm focus:ring-blue-300 transition duration-200">
+      <select id="roleFilter" class="hidden sm:block rounded-md border border-gray-300 px-3 py-2 text-sm focus:ring-blue-300 transition duration-200">
         <option value="">担当区分</option>
       </select>
-      <input id="searchInput" type="text" placeholder="曲名・アーティスト" class="col-span-1 sm:col-span-2 rounded-md border border-gray-300 px-3 py-2 text-sm focus:ring-blue-300 transition duration-200">
-      <select id="sortOrder" class="rounded-md border border-gray-300 px-3 py-2 text-sm focus:ring-blue-300 transition duration-200">
+      <input id="searchInput" type="text" placeholder="曲名・アーティスト" 
+        class="hidden sm:block col-span-1 sm:col-span-2 rounded-md border border-gray-300 px-3 py-2 text-sm focus:ring-blue-300 transition duration-200">
+      <select id="sortOrder" class="hidden sm:block rounded-md border border-gray-300 px-3 py-2 text-sm focus:ring-blue-300 transition duration-200">
         <option value="desc">新しい順</option>
         <option value="asc">古い順</option>
       </select>
-      <button id="resetFilters" class="bg-blue-100 hover:bg-blue-200 text-blue-900 font-medium text-sm px-4 py-2 rounded-md transition-all duration-300">リセット</button>
+      <button id="resetFilters" class="hidden sm:block bg-blue-100 hover:bg-blue-200 text-blue-900 font-medium text-sm px-4 py-2 rounded-md transition-all duration-300">リセット</button>
           <!-- ランダム再生ボタン -->
-    <button id="randomPlayButton" class="bg-green-100 hover:bg-green-200 text-green-900 font-medium text-sm px-4 py-2 rounded-md transition-all duration-300 mt-4 w-full sm:w-auto">
+    <button id="randomPlayButton" class="hidden sm:block bg-green-100 hover:bg-green-200 text-green-900 font-medium text-sm px-4 py-2 rounded-md transition-all duration-300 mt-4 w-full sm:w-auto">
       ランダム再生
     </button>
     </div>
@@ -217,7 +218,7 @@ section {
   <p>本サイトはファンによる非公式ページです。</p>
   <p>このサイトは <a href="https://pages.github.com/" class="underline" target="_blank">GitHub Pages</a> を利用して公開しています。</p>
   <p>動画は各配信プラットフォームの埋め込み機能を使用しています。</p>
- <p>最終更新日：2025/04/14 03:01</p>
+ <p>最終更新日：2025/04/14 03:05</p>
 </footer>
  
   <!-- 再生中の曲名表示部分 -->
