--- a/index.html
+++ b/index.html
@@ -145,19 +145,16 @@ section {
 
   <section class="max-w-8xl mx-auto mt-6 px-4">
 
-    <!-- モバイル専用フィルターボタン（sectionの直後） -->
-<div class="block sm:hidden text-center mt-4">
-  <button id="openFilterModal" class="bg-blue-500 text-white px-4 py-2 rounded-md">
+<!-- モバイル用：絞り込み＋ランダム再生を横並び -->
+<div class="block sm:hidden flex justify-center gap-2 mt-4 px-4">
+  <button id="openFilterModal" class="bg-blue-500 text-white px-4 py-2 rounded-md w-full">
     🔍 絞り込み
   </button>
-</div>
-
-    <!-- モバイル専用ランダム再生ボタン（sm未満のみ表示） -->
-<div class="block sm:hidden text-center mt-2">
-  <button id="mobileRandomPlayButton" class="bg-green-500 text-white px-4 py-2 rounded-md">
+  <button id="mobileRandomPlayButton" class="bg-green-500 text-white px-4 py-2 rounded-md w-full">
     🎲 ランダム再生
   </button>
 </div>
+
 
 
     <h2 class="text-xl font-semibold text-gray-800">動画リスト</h2>
