--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
-  <title>にじさんじ所属 司賀りこ 歌まとめ</title>
+  <title>しがりこのうた。</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -134,11 +134,11 @@ section {
 </head>
 <body class="bg-white text-gray-800">
   <header class="border-b sticky top-0 z-10 bg-white/90 backdrop-blur px-4 py-3 shadow-sm">
-    <h1 class="text-center text-xl sm:text-2xl font-semibold text-gray-900 tracking-tight">司賀りこ 歌まとめ</h1>
+    <h1 class="text-center text-xl sm:text-2xl font-semibold text-gray-900 tracking-tight">しがりこのうた。</h1>
   </header>
 
   <div class="max-w-4xl mx-auto px-4 mt-4 text-center text-sm text-gray-600">
-  にじさんじ所属 司賀りこさんの歌ってみたや歌枠などをまとめた非公式ファンサイトです。<br>
+  にじさんじ所属 司賀りこさんの歌ってみたや歌枠などをまとめた非公式ファンアーカイブです。<br>
   Youtube(歌ってみた、shorts、歌枠) / tiktok を掲載しています。<br>
   tiktokのみ、仕様上youtubeに比べると再生音が大きい為、ご注意ください。<br>
 </div>
@@ -155,9 +155,6 @@ section {
   </button>
 </div>
 
-
-
-    <h2 class="text-xl font-semibold text-gray-800">動画リスト</h2>
     <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-3">
       <select id="categoryFilter" class="hidden sm:block rounded-md border border-gray-300 px-3 py-2 text-sm focus:ring-blue-300 transition duration-200">
         <option value="">カテゴリ</option>
