--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@ section {
   <section class="max-w-8xl mx-auto mt-6 px-4">
 
 <!-- モバイル用：絞り込み＋ランダム再生を横並び -->
-<div class="block sm:hidden flex justify-center gap-2 mt-4 px-4">
+<div class="block sm:hidden flex items-center justify-center gap-2 mt-4 px-4">
   <button id="openFilterModal" class="bg-blue-500 text-white px-4 py-2 rounded-md w-full">
     🔍 絞り込み
   </button>
