--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
   flex-wrap: nowrap;
   gap: 0.5rem;
   align-items: center;
-  overflow: hidden;
+  overflow-x: auto;
   white-space: nowrap;
   min-width: 0
 }
