--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
   font-weight: 600;
   color: #1e40af; /* text-blue-800 */
   text-decoration: none;
-  flex-shrink: 1;         /* 必須：縮むことを許可 */
+  flex: 1;    
   min-width: 0;           /* 親がflexのとき、はみ出し制御に必須 */
   overflow: hidden;
   text-overflow: ellipsis;
