--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@ document.getElementById('applyFilters').addEventListener('click', () => {
             // 公開月（例: 2023/07）だけ抽出して追加
   const rawDate = v["公開日"];
   if (rawDate && /^\d{4}\/\d{2}/.test(rawDate)) {
-    const month = rawDate.slice(0, 7); // "YYYY/MM"
+    const month = rawDate.slice(0, 7).replace('-', '/'); // "YYYY/MM"
     sets.date.add(month);
   }
         });
