--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@ section {
   <p>本サイトはファンによる非公式ページです。</p>
   <p>このサイトは <a href="https://pages.github.com/" class="underline" target="_blank">GitHub Pages</a> を利用して公開しています。</p>
   <p>動画は各配信プラットフォームの埋め込み機能を使用しています。</p>
- <p>最終更新日：2025/04/14 04:21</p>
+ <p>最終更新日：2025/04/14 04:24</p>
 </footer>
  
   <!-- 再生中の曲名表示部分 -->
@@ -382,7 +382,7 @@ if (mobileRandomPlayButton) {
       function applyFilters() {
         let filtered = allVideos.filter(video => {
           return (!categoryFilter.value || video["カテゴリ"] === categoryFilter.value) &&
-                 (!dateFilter.value ||  video["公開日"].startsWith(dateFilter.value)) &&
+                 (!dateFilter.value || video["公開日"].slice(0, 7).replace('-', '/') === dateFilter.value) &&
                  (!typeFilter.value || video["動画種別"] === typeFilter.value) &&
                  (!roleFilter.value || video["担当区分"] === roleFilter.value) &&
                  (!searchInput.value ||
