--- a/index.html
+++ b/index.html
@@ -483,7 +483,7 @@ function loadVideo(video, container) {
   if (platform.toLowerCase().includes("youtube")) {
   iframe.className = "w-full aspect-video";
 } else if (platform.toLowerCase() === "tiktok") {
-  iframe.className = "w-[300px] h-[550px] mx-auto";
+  iframe.className =  "w-full max-w-xs h-[80vh] sm:h-[550px] mx-auto";
 }
 
   // 再生中の曲名を更新
