--- a/index.html
+++ b/index.html
@@ -466,7 +466,7 @@ function renderVideoList(videos) {
 }
 
 
-function loadVideo(video, container) {
+function loadVideo(video, item) {
   const start = parseInt(video["start"] || '0');
   let videoId = video["videoId"];
   const platform = video["platform"];
