--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@ section {
   <p>本サイトはファンによる非公式ページです。</p>
   <p>このサイトは <a href="https://pages.github.com/" class="underline" target="_blank">GitHub Pages</a> を利用して公開しています。</p>
   <p>動画は各配信プラットフォームの埋め込み機能を使用しています。</p>
- <p>最終更新日：2025/04/14 05:00</p>
+ <p>最終更新日：2025/04/14 05:06</p>
 </footer>
  
   <!-- 再生中の曲名表示部分 -->
@@ -411,6 +411,8 @@ if (mobileRandomPlayButton) {
 function renderVideoList(videos) {
   videoList.innerHTML = '';
 
+  let playingElement = null;
+
   videos.forEach(video => {
     const item = document.createElement('div');
     item.className = 'p-3 mb-3 bg-blue-100 rounded-lg shadow-md border-2 border-teal-700 space-y-1';
@@ -453,17 +455,24 @@ function renderVideoList(videos) {
       metaRow.appendChild(span);
     });
 
-    // 再生中ハイライト
+     // 再生中ハイライト
     const nowPlayingTitle = document.getElementById('nowPlayingTitle').textContent;
     if (`${video["title"]} - ${video["artist"]}` === nowPlayingTitle) {
       item.style.backgroundColor = '#e0f7fa';
+      playingElement = item; // ← 再生中だったら覚えておく
     }
+
 
     item.appendChild(topRow);
     item.appendChild(metaRow);
     videoList.appendChild(item);
   });
+  // スクロール実行
+  if (playingElement) {
+    playingElement.scrollIntoView({ behavior: 'smooth', block: 'center' });
+  }
 }
+
 
 
 function loadVideo(video, item) {
